Refactor grid layout in lmmpoc_layoutlm_comparison notebook
- Adjusted grid specifications to use 4 rows instead of 5 for better layout management.
- Modified subplot assignments for additional capabilities and throughput comparison panels to align with the new grid structure.

--- a/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
+++ b/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
@@ -1525,7 +1525,7 @@
     "fig = plt.figure(figsize=(7.5, 13), facecolor='white')\n",
     "\n",
     "# Create grid: 4 rows with different heights\n",
-    "gs = fig.add_gridspec(5, 2, height_ratios=[1.2, 1, 1, 0.5, 0.6], hspace=0.5, wspace=0.4, top=0.87, bottom=0.04)\n",
+    "gs = fig.add_gridspec(4, 2, height_ratios=[1.2, 1, 1, 0.7], hspace=0.5, wspace=0.4, top=0.87, bottom=0.04)\n",
     "\n",
     "# --- Title & Summary Stats (top spanning both columns) ---\n",
     "ax_title = fig.add_axes([0.05, 0.93, 0.9, 0.05])\n",
@@ -1713,7 +1713,7 @@
     "ax5.set_title('E. Summary Statistics', fontsize=11, fontweight='bold', loc='left', pad=10)\n",
     "\n",
     "# --- Panel F: Additional Capabilities (bottom spanning both columns) ---\n",
-    "ax6 = fig.add_subplot(gs[3, :])\n",
+    "ax6 = fig.add_subplot(gs[3, 0])\n",
     "ax6.axis('off')\n",
     "\n",
     "# Build additional capabilities text\n",
@@ -1736,7 +1736,7 @@
     "\n",
     "\n",
     "# --- Panel G: Throughput Comparison ---\n",
-    "ax7 = fig.add_subplot(gs[4, :])\n",
+    "ax7 = fig.add_subplot(gs[3, 1])\n",
     "\n",
     "# Throughput data\n",
     "throughput_models = ['InternVL3.5-8B', 'LayoutLM']\n",
