Refactor additional capabilities text positioning and styling in layout comparison notebook
- Adjusted text position from center to top of the box for better visibility.
- Changed vertical alignment from 'center' to 'top'.
- Modified padding in the bounding box for improved aesthetics.

--- a/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
+++ b/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
@@ -1728,9 +1728,9 @@
     "    exc_text = \"F. ADDITIONAL CAPABILITIES\\n\\nNo exclusive capabilities to report.\"\n",
     "\n",
     "# Add styled box for additional capabilities\n",
-    "ax6.text(0.5, 0.5, exc_text, transform=ax6.transAxes, fontsize=9,\n",
-    "         ha='center', va='center',\n",
-    "         bbox=dict(boxstyle='round,pad=0.5', facecolor='#e8f5e9', edgecolor='#2ecc71', linewidth=2))\n",
+    "ax6.text(0.5, 0.95, exc_text, transform=ax6.transAxes, fontsize=9,\n",
+    "         ha='center', va='top',\n",
+    "         bbox=dict(boxstyle='round,pad=0.3', facecolor='#e8f5e9', edgecolor='#2ecc71', linewidth=2))\n",
     "\n",
     "\n",
     "\n",
