Add clarification to additional capabilities section in comparison notebook
- Enhanced the text in the additional capabilities section to specify that the fields listed are unique to the current model and not available in the competing model.

--- a/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
+++ b/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
@@ -1719,6 +1719,7 @@
     "# Build additional capabilities text\n",
     "if len(exclusive_df) > 0:\n",
     "    exc_text = f\"F. ADDITIONAL CAPABILITIES ({CURRENT_MODEL_NAME} only)\\n\\n\"\n",
+    "    exc_text += \"The following fields are unique to our model (not available in competing model):\\n\\n\"\n",
     "    for _, row in exclusive_df.iterrows():\n",
     "        acc_str = f\"{row['current_accuracy']:.1%}\" if pd.notna(row['current_accuracy']) else \"N/A\"\n",
     "        exc_text += f\"   \u2022 {row['field']}: {acc_str} accuracy\\n\"\n",
