Enhance throughput comparison plot aesthetics
- Adjusted y-axis tick parameters for better visibility.
- Removed y-axis ticks for a cleaner look.
- Updated sns.despine to remove the left spine for improved plot clarity.

--- a/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
+++ b/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
@@ -1753,9 +1753,11 @@
     "ax7.set_xlabel('Throughput (pages/min)', fontsize=9)\n",
     "ax7.set_title('G. Processing Throughput Comparison', fontsize=11, fontweight='bold', loc='left')\n",
     "ax7.set_xlim(0, 5)\n",
+    "ax7.tick_params(axis='y', labelsize=8, pad=0)\n",
+    "ax7.yaxis.set_tick_params(length=0)\n",
     "ax7.xaxis.grid(True, linestyle='--', alpha=0.7)\n",
     "ax7.set_axisbelow(True)\n",
-    "sns.despine(ax=ax7)\n",
+    "sns.despine(ax=ax7, left=True)\n",
     "\n",
     "plt.savefig(OUTPUT_DIR / 'comparison_dashboard_a4.png', dpi=300, bbox_inches='tight', \n",
     "            facecolor='white', edgecolor='none')\n",
