--- a/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
+++ b/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
@@ -1525,7 +1525,7 @@
     "fig = plt.figure(figsize=(7.5, 13), facecolor='white')\n",
     "\n",
     "# Create grid: 4 rows with different heights\n",
-    "gs = fig.add_gridspec(4, 2, height_ratios=[1.2, 1, 1, 0.7], hspace=0.5, wspace=0.4, top=0.87, bottom=0.04)\n",
+    "gs = fig.add_gridspec(4, 2, height_ratios=[1.2, 1, 1, 0.7], hspace=0.5, wspace=0.6, top=0.87, bottom=0.04)\n",
     "\n",
     "# --- Title & Summary Stats (top spanning both columns) ---\n",
     "ax_title = fig.add_axes([0.05, 0.93, 0.9, 0.05])\n",
@@ -1715,10 +1715,11 @@
     "# --- Panel F: Additional Capabilities (bottom spanning both columns) ---\n",
     "ax6 = fig.add_subplot(gs[3, 0])\n",
     "ax6.axis('off')\n",
+    "ax6.set_title('F. Additional Capabilities', fontsize=11, fontweight='bold', loc='left')\n",
     "\n",
     "# Build additional capabilities text\n",
     "if len(exclusive_df) > 0:\n",
-    "    exc_text = f\"F. ADDITIONAL CAPABILITIES\\n({CURRENT_MODEL_NAME} only)\\n\\n\"\n",
+    "    exc_text = f\"({CURRENT_MODEL_NAME} only)\\n\\n\"\n",
     "    exc_text += \"Fields unique to our model:\\n\\n\"\n",
     "    for _, row in exclusive_df.iterrows():\n",
     "        acc_str = f\"{row['current_accuracy']:.1%}\" if pd.notna(row['current_accuracy']) else \"N/A\"\n",
@@ -1738,8 +1739,8 @@
     "# --- Panel G: Throughput Comparison ---\n",
     "ax7 = fig.add_subplot(gs[3, 1])\n",
     "\n",
-    "# Throughput data\n",
-    "throughput_models = ['InternVL3.5-8B', 'LayoutLM']\n",
+    "# Throughput data - use shorter labels to avoid overlap\n",
+    "throughput_models = ['IVL3.5-8B', 'LayoutLM']\n",
     "throughput_values = [1.6, 3.52]\n",
     "throughput_colors = ['#2ecc71', '#3498db']\n",
     "\n",
@@ -1751,13 +1752,12 @@
     "             f'{val:.1f} pages/min', va='center', fontsize=9, fontweight='bold')\n",
     "\n",
     "ax7.set_xlabel('Throughput (pages/min)', fontsize=9)\n",
-    "ax7.set_title('G. Processing Throughput Comparison', fontsize=11, fontweight='bold', loc='left')\n",
+    "ax7.set_title('G. Throughput', fontsize=11, fontweight='bold', loc='left')\n",
     "ax7.set_xlim(0, 5)\n",
-    "ax7.tick_params(axis='y', labelsize=8, pad=0)\n",
-    "ax7.yaxis.set_tick_params(length=0)\n",
+    "ax7.tick_params(axis='y', labelsize=9)\n",
     "ax7.xaxis.grid(True, linestyle='--', alpha=0.7)\n",
     "ax7.set_axisbelow(True)\n",
-    "sns.despine(ax=ax7, left=True)\n",
+    "sns.despine(ax=ax7)\n",
     "\n",
     "plt.savefig(OUTPUT_DIR / 'comparison_dashboard_a4.png', dpi=300, bbox_inches='tight', \n",
     "            facecolor='white', edgecolor='none')\n",
