Refactor additional capabilities text display in layout comparison notebook
- Simplified the message for exclusive capabilities by removing the prefix.
- Adjusted the positioning of the text box to center it vertically in the plot.

--- a/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
+++ b/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
@@ -1727,11 +1727,11 @@
     "    if not np.isnan(metrics.get('exclusive_mean', np.nan)):\n",
     "        exc_text += f\"\\n   Mean F1 of exclusive capabilities: {metrics['exclusive_mean']:.1%}\"\n",
     "else:\n",
-    "    exc_text = \"F. ADDITIONAL CAPABILITIES\\n\\nNo exclusive capabilities to report.\"\n",
+    "    exc_text = \"No exclusive capabilities to report.\"\n",
     "\n",
     "# Add styled box for additional capabilities\n",
-    "ax6.text(0.5, 0.95, exc_text, transform=ax6.transAxes, fontsize=9,\n",
-    "         ha='center', va='top',\n",
+    "ax6.text(0.5, 0.5, exc_text, transform=ax6.transAxes, fontsize=9,\n",
+    "         ha='center', va='center',\n",
     "         bbox=dict(boxstyle='round,pad=0.3', facecolor='#e8f5e9', edgecolor='#2ecc71', linewidth=2))\n",
     "\n",
     "\n",
