Add supporting data tables for A4 and Landscape dashboards
- Introduced detailed tables for the A4 dashboard, including field-level F1 scores, category averages, distribution statistics, improvement per field, summary metrics, additional capabilities, and throughput comparison.
- Added a section for the Landscape dashboard, clarifying that it uses the same underlying data as the A4 dashboard and providing key data sources.

--- a/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
+++ b/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
@@ -1769,6 +1769,177 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# \ud83d\udcca A4 Dashboard - Supporting Data Tables",
+    "",
+    "The tables below contain the exact values used to generate each panel in the A4 dashboard above.",
+    "Data Scientists can use these to verify the accuracy of all visualizations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# =============================================================================",
+    "# A4 DASHBOARD - SUPPORTING DATA TABLES",
+    "# =============================================================================",
+    "# These tables contain the exact values behind each dashboard panel",
+    "",
+    "from IPython.display import display, HTML",
+    "",
+    "print(\"=\" * 80)",
+    "print(\"\ud83d\udcca A4 DASHBOARD - SUPPORTING DATA TABLES\")",
+    "print(\"=\" * 80)",
+    "",
+    "# -----------------------------------------------------------------------------",
+    "# TABLE A: Field-Level F1 Scores (Panel A - Horizontal Bar Chart)",
+    "# -----------------------------------------------------------------------------",
+    "print(\"\\n\ud83d\udcc8 TABLE A: Field-Level F1 Scores (sorted by current model performance)\")",
+    "print(\"-\" * 80)",
+    "",
+    "field_table = plot_df[['field', 'current_accuracy', 'competing_accuracy', 'difference']].copy()",
+    "field_table = field_table.sort_values('current_accuracy', ascending=False)",
+    "field_table.columns = ['Field', f'{CURRENT_MODEL_NAME} F1', f'{COMPETING_MODEL_NAME} F1', 'Difference']",
+    "",
+    "# Format for display",
+    "field_display = field_table.copy()",
+    "field_display[f'{CURRENT_MODEL_NAME} F1'] = field_display[f'{CURRENT_MODEL_NAME} F1'].apply(lambda x: f\"{x:.1%}\")",
+    "field_display[f'{COMPETING_MODEL_NAME} F1'] = field_display[f'{COMPETING_MODEL_NAME} F1'].apply(lambda x: f\"{x:.1%}\")",
+    "field_display['Difference'] = field_display['Difference'].apply(lambda x: f\"{x:+.1%}\")",
+    "print(field_display.to_string(index=False))",
+    "",
+    "# -----------------------------------------------------------------------------",
+    "# TABLE B: Category Averages (Panel B - Radar Chart)",
+    "# -----------------------------------------------------------------------------",
+    "print(\"\\n\\n\ud83d\udcc8 TABLE B: Category Average F1 Scores (Radar Chart Data)\")",
+    "print(\"-\" * 80)",
+    "",
+    "# Recalculate category data for display",
+    "cat_table_data = []",
+    "for cat, fields in FIELD_CATEGORIES.items():",
+    "    cat_df_temp = comparison_df[comparison_df['field'].isin(fields)]",
+    "    if len(cat_df_temp) > 0:",
+    "        cat_table_data.append({",
+    "            'Category': cat,",
+    "            f'{CURRENT_MODEL_NAME} Mean F1': cat_df_temp['current_accuracy'].mean(),",
+    "            f'{COMPETING_MODEL_NAME} Mean F1': cat_df_temp['competing_accuracy'].mean(),",
+    "            'Difference': cat_df_temp['current_accuracy'].mean() - cat_df_temp['competing_accuracy'].mean(),",
+    "            'Fields in Category': len(cat_df_temp)",
+    "        })",
+    "",
+    "cat_table = pd.DataFrame(cat_table_data)",
+    "cat_display = cat_table.copy()",
+    "cat_display[f'{CURRENT_MODEL_NAME} Mean F1'] = cat_display[f'{CURRENT_MODEL_NAME} Mean F1'].apply(lambda x: f\"{x:.1%}\")",
+    "cat_display[f'{COMPETING_MODEL_NAME} Mean F1'] = cat_display[f'{COMPETING_MODEL_NAME} Mean F1'].apply(lambda x: f\"{x:.1%}\")",
+    "cat_display['Difference'] = cat_display['Difference'].apply(lambda x: f\"{x:+.1%}\")",
+    "print(cat_display.to_string(index=False))",
+    "",
+    "# -----------------------------------------------------------------------------",
+    "# TABLE C: Distribution Statistics (Panel C - Box Plot)",
+    "# -----------------------------------------------------------------------------",
+    "print(\"\\n\\n\ud83d\udcc8 TABLE C: Distribution Statistics (Box Plot Data)\")",
+    "print(\"-\" * 80)",
+    "",
+    "dist_stats = pd.DataFrame({",
+    "    'Statistic': ['Mean', 'Median', 'Std Dev', 'Min', 'Max', 'Q1 (25%)', 'Q3 (75%)'],",
+    "    CURRENT_MODEL_NAME: [",
+    "        f\"{plot_df['current_accuracy'].mean():.1%}\",",
+    "        f\"{plot_df['current_accuracy'].median():.1%}\",",
+    "        f\"{plot_df['current_accuracy'].std():.1%}\",",
+    "        f\"{plot_df['current_accuracy'].min():.1%}\",",
+    "        f\"{plot_df['current_accuracy'].max():.1%}\",",
+    "        f\"{plot_df['current_accuracy'].quantile(0.25):.1%}\",",
+    "        f\"{plot_df['current_accuracy'].quantile(0.75):.1%}\",",
+    "    ],",
+    "    COMPETING_MODEL_NAME: [",
+    "        f\"{plot_df['competing_accuracy'].mean():.1%}\",",
+    "        f\"{plot_df['competing_accuracy'].median():.1%}\",",
+    "        f\"{plot_df['competing_accuracy'].std():.1%}\",",
+    "        f\"{plot_df['competing_accuracy'].min():.1%}\",",
+    "        f\"{plot_df['competing_accuracy'].max():.1%}\",",
+    "        f\"{plot_df['competing_accuracy'].quantile(0.25):.1%}\",",
+    "        f\"{plot_df['competing_accuracy'].quantile(0.75):.1%}\",",
+    "    ]",
+    "})",
+    "print(dist_stats.to_string(index=False))",
+    "",
+    "# -----------------------------------------------------------------------------",
+    "# TABLE D: Improvement Per Field (Panel D - Lollipop Chart)",
+    "# -----------------------------------------------------------------------------",
+    "print(\"\\n\\n\ud83d\udcc8 TABLE D: F1 Improvement Per Field (Lollipop Chart Data)\")",
+    "print(\"-\" * 80)",
+    "",
+    "diff_table = plot_df[['field', 'difference']].copy()",
+    "diff_table = diff_table.sort_values('difference', ascending=False)",
+    "diff_table.columns = ['Field', 'F1 Difference']",
+    "diff_table['Direction'] = diff_table['F1 Difference'].apply(",
+    "    lambda x: f\"\u2191 {CURRENT_MODEL_NAME}\" if x > 0 else (f\"\u2193 {COMPETING_MODEL_NAME}\" if x < 0 else \"= Tie\")",
+    ")",
+    "diff_display = diff_table.copy()",
+    "diff_display['F1 Difference'] = diff_display['F1 Difference'].apply(lambda x: f\"{x:+.1%}\")",
+    "print(diff_display.to_string(index=False))",
+    "",
+    "# -----------------------------------------------------------------------------",
+    "# TABLE E: Summary Metrics (Panel E - Summary Statistics)",
+    "# -----------------------------------------------------------------------------",
+    "print(\"\\n\\n\ud83d\udcc8 TABLE E: Aggregate Metrics Summary\")",
+    "print(\"-\" * 80)",
+    "",
+    "summary_data = [",
+    "    ['Mean F1', f\"{metrics['current_mean']:.1%}\", f\"{metrics['competing_mean']:.1%}\"],",
+    "    ['Median F1', f\"{metrics['current_median']:.1%}\", f\"{metrics['competing_median']:.1%}\"],",
+    "    ['Std Dev', f\"{metrics['current_std']:.1%}\", f\"{metrics['competing_std']:.1%}\"],",
+    "    ['Critical Fields Mean', f\"{metrics['critical_current_mean']:.1%}\", f\"{metrics['critical_competing_mean']:.1%}\"],",
+    "    ['Fields Compared', str(metrics['n_fields_compared']), str(metrics['n_fields_compared'])],",
+    "]",
+    "summary_df = pd.DataFrame(summary_data, columns=['Metric', CURRENT_MODEL_NAME, COMPETING_MODEL_NAME])",
+    "print(summary_df.to_string(index=False))",
+    "",
+    "print(\"\\n\ud83d\udcca Statistical Tests:\")",
+    "print(f\"  - Paired t-test p-value: {stat_results['paired_ttest']['pvalue']:.4f}\")",
+    "print(f\"  - Cohen's d effect size: {stat_results['cohens_d']:.2f} ({effect_interp})\")",
+    "print(f\"  - 95% CI for mean difference: {stat_results['bootstrap_ci_95'][0]:+.1%} to {stat_results['bootstrap_ci_95'][1]:+.1%}\")",
+    "",
+    "# -----------------------------------------------------------------------------",
+    "# TABLE F: Additional Capabilities (Panel F)",
+    "# -----------------------------------------------------------------------------",
+    "print(\"\\n\\n\ud83d\udcc8 TABLE F: Additional Capabilities (Exclusive to \" + CURRENT_MODEL_NAME + \")\")",
+    "print(\"-\" * 80)",
+    "",
+    "if len(exclusive_df) > 0:",
+    "    exc_table = exclusive_df[['field', 'category', 'current_accuracy']].copy()",
+    "    exc_table.columns = ['Field', 'Category', 'F1 Score']",
+    "    exc_display = exc_table.copy()",
+    "    exc_display['F1 Score'] = exc_display['F1 Score'].apply(lambda x: f\"{x:.1%}\" if pd.notna(x) else \"N/A\")",
+    "    print(exc_display.to_string(index=False))",
+    "    print(f\"\\nMean F1 of exclusive capabilities: {metrics.get('exclusive_mean', 0):.1%}\")",
+    "else:",
+    "    print(\"No exclusive capabilities to report.\")",
+    "",
+    "# -----------------------------------------------------------------------------",
+    "# TABLE G: Throughput Comparison (Panel G)",
+    "# -----------------------------------------------------------------------------",
+    "print(\"\\n\\n\ud83d\udcc8 TABLE G: Throughput Comparison\")",
+    "print(\"-\" * 80)",
+    "",
+    "throughput_df = pd.DataFrame({",
+    "    'Model': ['InternVL3.5-8B', 'LayoutLM'],",
+    "    'Throughput (pages/min)': [1.6, 3.52],",
+    "    'Notes': ['Vision-Language Model', 'Layout-aware Transformer']",
+    "})",
+    "print(throughput_df.to_string(index=False))",
+    "",
+    "print(\"\\n\" + \"=\" * 80)",
+    "print(\"\u2705 All supporting data tables generated successfully\")",
+    "print(\"=\" * 80)",
+    ""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -1996,6 +2167,41 @@
     "            facecolor='white', edgecolor='none')\n",
     "print(f\"Saved: {OUTPUT_DIR / 'comparison_dashboard_landscape.png'}\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# \ud83d\udcca Landscape Dashboard - Supporting Data Tables",
+    "",
+    "The tables below contain the exact values used to generate each panel in the landscape dashboard above.",
+    "These are the same data as the A4 dashboard, reorganized for the landscape layout."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# =============================================================================",
+    "# LANDSCAPE DASHBOARD - SUPPORTING DATA TABLES  ",
+    "# =============================================================================",
+    "# Note: Uses same underlying data as A4 dashboard - tables are identical",
+    "",
+    "print(\"=\" * 80)",
+    "print(\"\ud83d\udcca LANDSCAPE DASHBOARD - DATA VERIFICATION\")",
+    "print(\"=\" * 80)",
+    "print(\"\\n\u2139\ufe0f  The landscape dashboard uses identical data to the A4 dashboard.\")",
+    "print(\"    Refer to the A4 Dashboard Supporting Data Tables above for complete data.\")",
+    "print(\"\\n    Key data sources:\")",
+    "print(f\"    - Field-level F1: {len(plot_df)} comparable fields\")",
+    "print(f\"    - Category averages: {len(FIELD_CATEGORIES)} categories\")",
+    "print(f\"    - Exclusive capabilities: {len(exclusive_df)} fields\")",
+    "print(f\"    - Statistical significance: p={stat_results['paired_ttest']['pvalue']:.4f}\")",
+    "print(\"=\" * 80)",
+    ""
    ]
   },
   {
