Refactor notebook export process: switch from PDF to HTML export, update instructions, and improve output handling

--- a/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
+++ b/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
@@ -2461,13 +2461,16 @@
    "outputs": [],
    "source": [
     "# =============================================================================",
-    "# EXPORT NOTEBOOK TO PDF/HTML",
+    "# EXPORT NOTEBOOK TO HTML",
     "# =============================================================================",
-    "# Run this cell AFTER all other cells have been executed to export with outputs",
+    "# Run this cell AFTER all other cells have been executed",
+    "# Then manually save the notebook before running this cell",
     "",
-    "import subprocess",
     "from pathlib import Path",
     "from datetime import datetime",
+    "import nbformat",
+    "from nbconvert import HTMLExporter",
+    "from traitlets.config import Config",
     "",
     "# Configuration",
     "NOTEBOOK_NAME = \"lmmpoc_layoutlm_comparison.ipynb\"",
@@ -2480,61 +2483,47 @@
     "print(\"=\" * 60)",
     "print(\"\ud83d\udce4 EXPORTING NOTEBOOK WITH OUTPUTS\")",
     "print(\"=\" * 60)",
+    "print(\"\\n\u26a0\ufe0f  Make sure you SAVED the notebook before running this cell!\")",
+    "print(\"    (Ctrl+S or File \u2192 Save)\")",
     "",
-    "# First, save the current notebook state",
-    "from IPython.display import Javascript, display",
-    "display(Javascript('IPython.notebook.save_checkpoint()'))",
+    "# Read the saved notebook file",
+    "print(f\"\\n\ud83d\udcc4 Reading {NOTEBOOK_NAME}...\")",
+    "with open(NOTEBOOK_NAME, 'r', encoding='utf-8') as f:",
+    "    notebook = nbformat.read(f, as_version=4)",
     "",
-    "import time",
-    "time.sleep(2)  # Wait for save",
+    "# Configure HTML exporter",
+    "c = Config()",
+    "c.HTMLExporter.exclude_input_prompt = False",
+    "c.HTMLExporter.exclude_output_prompt = False",
     "",
-    "# Method 1: Try HTML export (most reliable)",
+    "html_exporter = HTMLExporter(config=c)",
+    "html_exporter.template_name = 'classic'",
+    "",
+    "# Export to HTML",
+    "print(\"\ud83d\udcc4 Converting to HTML...\")",
+    "(body, resources) = html_exporter.from_notebook_node(notebook)",
+    "",
+    "# Save HTML file",
     "html_output = EXPORT_DIR / f\"{base_name}_{timestamp}.html\"",
-    "cmd_html = [",
-    "    \"jupyter\", \"nbconvert\", ",
-    "    \"--to\", \"html\",",
-    "    \"--output-dir\", str(EXPORT_DIR),",
-    "    \"--output\", f\"{base_name}_{timestamp}\",",
-    "    NOTEBOOK_NAME",
-    "]",
+    "with open(html_output, 'w', encoding='utf-8') as f:",
+    "    f.write(body)",
     "",
-    "print(f\"\\n\ud83d\udcc4 Exporting to HTML...\")",
-    "result = subprocess.run(cmd_html, capture_output=True, text=True)",
-    "",
-    "if result.returncode == 0:",
-    "    print(f\"\u2705 HTML exported: {html_output}\")",
-    "    print(f\"   \u2192 Open in browser and Print \u2192 Save as PDF\")",
-    "else:",
-    "    print(f\"\u274c HTML export failed: {result.stderr}\")",
-    "",
-    "# Method 2: Try PDF via nbconvert (if available)",
-    "pdf_output = EXPORT_DIR / f\"{base_name}_{timestamp}.pdf\"",
-    "cmd_pdf = [",
-    "    \"jupyter\", \"nbconvert\",",
-    "    \"--to\", \"pdf\",",
-    "    \"--output-dir\", str(EXPORT_DIR),",
-    "    \"--output\", f\"{base_name}_{timestamp}\",",
-    "    NOTEBOOK_NAME",
-    "]",
-    "",
-    "print(f\"\\n\ud83d\udcc4 Attempting PDF export...\")",
-    "result_pdf = subprocess.run(cmd_pdf, capture_output=True, text=True)",
-    "",
-    "if result_pdf.returncode == 0:",
-    "    print(f\"\u2705 PDF exported: {pdf_output}\")",
-    "else:",
-    "    print(f\"\u26a0\ufe0f  Direct PDF not available (LaTeX not installed)\")",
-    "    print(f\"   Use the HTML file above \u2192 Print to PDF\")",
+    "print(f\"\\n\u2705 HTML exported successfully!\")",
+    "print(f\"   \ud83d\udcc1 {html_output}\")",
+    "print(f\"   \ud83d\udcca Size: {html_output.stat().st_size / 1024:.1f} KB\")",
     "",
     "print(\"\\n\" + \"=\" * 60)",
-    "print(f\"\ud83d\udcc1 Exports saved to: {EXPORT_DIR.absolute()}\")",
+    "print(\"\ud83d\udccb TO CREATE PDF:\")",
+    "print(\"   1. Download the HTML file\")",
+    "print(\"   2. Open in browser (Chrome recommended)\")",
+    "print(\"   3. Print \u2192 Save as PDF\")",
     "print(\"=\" * 60)",
     "",
-    "# List exported files",
-    "print(\"\\nExported files:\")",
+    "# List all exports",
+    "print(\"\\n\ud83d\udcc1 All exports:\")",
     "for f in sorted(EXPORT_DIR.glob(f\"{base_name}*\")):",
     "    size_kb = f.stat().st_size / 1024",
-    "    print(f\"  \ud83d\udcc4 {f.name} ({size_kb:.1f} KB)\")",
+    "    print(f\"   \ud83d\udcc4 {f.name} ({size_kb:.1f} KB)\")",
     ""
    ]
   }
