Refactor HTML export process in Jupyter notebook
- Updated the export process to manually construct HTML instead of using nbconvert.
- Improved markdown rendering and output handling for code cells.
- Added styles for better presentation of the exported HTML.
- Removed unnecessary dependencies and streamlined the code for clarity.

--- a/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
+++ b/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
@@ -2464,13 +2464,11 @@
     "# EXPORT NOTEBOOK TO HTML",
     "# =============================================================================",
     "# Run this cell AFTER all other cells have been executed",
-    "# Then manually save the notebook before running this cell",
+    "# SAVE the notebook first (Ctrl+S) before running this cell!",
     "",
     "from pathlib import Path",
     "from datetime import datetime",
-    "import nbformat",
-    "from nbconvert import HTMLExporter",
-    "from traitlets.config import Config",
+    "import json",
     "",
     "# Configuration",
     "NOTEBOOK_NAME = \"lmmpoc_layoutlm_comparison.ipynb\"",
@@ -2484,29 +2482,101 @@
     "print(\"\ud83d\udce4 EXPORTING NOTEBOOK WITH OUTPUTS\")",
     "print(\"=\" * 60)",
     "print(\"\\n\u26a0\ufe0f  Make sure you SAVED the notebook before running this cell!\")",
-    "print(\"    (Ctrl+S or File \u2192 Save)\")",
     "",
-    "# Read the saved notebook file",
+    "# Read the saved notebook",
     "print(f\"\\n\ud83d\udcc4 Reading {NOTEBOOK_NAME}...\")",
     "with open(NOTEBOOK_NAME, 'r', encoding='utf-8') as f:",
-    "    notebook = nbformat.read(f, as_version=4)",
+    "    notebook = json.load(f)",
     "",
-    "# Configure HTML exporter",
-    "c = Config()",
-    "c.HTMLExporter.exclude_input_prompt = False",
-    "c.HTMLExporter.exclude_output_prompt = False",
-    "",
-    "html_exporter = HTMLExporter(config=c)",
-    "html_exporter.template_name = 'classic'",
-    "",
-    "# Export to HTML",
+    "# Build simple HTML manually",
     "print(\"\ud83d\udcc4 Converting to HTML...\")",
-    "(body, resources) = html_exporter.from_notebook_node(notebook)",
+    "",
+    "html_parts = [\"\"\"<!DOCTYPE html>",
+    "<html>",
+    "<head>",
+    "    <meta charset=\"utf-8\">",
+    "    <title>Model F1 Comparison Dashboard</title>",
+    "    <style>",
+    "        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; ",
+    "               max-width: 1200px; margin: 0 auto; padding: 20px; background: #f5f5f5; }",
+    "        .cell { background: white; margin: 10px 0; padding: 15px; border-radius: 8px; ",
+    "                box-shadow: 0 1px 3px rgba(0,0,0,0.1); }",
+    "        .markdown-cell { }",
+    "        .code-cell { }",
+    "        .input { background: #f8f8f8; padding: 10px; border-radius: 4px; ",
+    "                 font-family: 'Monaco', 'Consolas', monospace; font-size: 13px;",
+    "                 overflow-x: auto; white-space: pre-wrap; margin-bottom: 10px; }",
+    "        .output { padding: 10px; }",
+    "        .output img { max-width: 100%; height: auto; }",
+    "        .output pre { background: #f0f0f0; padding: 10px; overflow-x: auto; ",
+    "                      font-family: 'Monaco', 'Consolas', monospace; font-size: 12px; }",
+    "        h1, h2, h3 { color: #333; }",
+    "        hr { border: none; border-top: 1px solid #ddd; margin: 20px 0; }",
+    "        .stream { white-space: pre-wrap; font-family: monospace; font-size: 12px; }",
+    "    </style>",
+    "</head>",
+    "<body>",
+    "<h1>Model F1 Comparison Dashboard</h1>",
+    "<p>Generated: \"\"\" + timestamp + \"\"\"</p>",
+    "<hr>",
+    "\"\"\"]",
+    "",
+    "import base64",
+    "",
+    "for i, cell in enumerate(notebook['cells']):",
+    "    cell_type = cell['cell_type']",
+    "    source = ''.join(cell.get('source', []))",
+    "    ",
+    "    if cell_type == 'markdown':",
+    "        # Simple markdown rendering",
+    "        content = source.replace('# ', '<h1>').replace('## ', '<h2>').replace('### ', '<h3>')",
+    "        content = content.replace('\\n', '<br>')",
+    "        html_parts.append(f'<div class=\"cell markdown-cell\">{content}</div>')",
+    "    ",
+    "    elif cell_type == 'code':",
+    "        html_parts.append('<div class=\"cell code-cell\">')",
+    "        html_parts.append(f'<div class=\"input\"><pre>{source}</pre></div>')",
+    "        ",
+    "        # Process outputs",
+    "        outputs = cell.get('outputs', [])",
+    "        for output in outputs:",
+    "            output_type = output.get('output_type', '')",
+    "            ",
+    "            if output_type == 'stream':",
+    "                text = ''.join(output.get('text', []))",
+    "                html_parts.append(f'<div class=\"output stream\"><pre>{text}</pre></div>')",
+    "            ",
+    "            elif output_type == 'execute_result' or output_type == 'display_data':",
+    "                data = output.get('data', {})",
+    "                ",
+    "                # Handle images (PNG)",
+    "                if 'image/png' in data:",
+    "                    img_data = data['image/png']",
+    "                    html_parts.append(f'<div class=\"output\"><img src=\"data:image/png;base64,{img_data}\"></div>')",
+    "                ",
+    "                # Handle text",
+    "                elif 'text/plain' in data:",
+    "                    text = ''.join(data['text/plain'])",
+    "                    html_parts.append(f'<div class=\"output\"><pre>{text}</pre></div>')",
+    "                ",
+    "                # Handle HTML",
+    "                elif 'text/html' in data:",
+    "                    html_content = ''.join(data['text/html'])",
+    "                    html_parts.append(f'<div class=\"output\">{html_content}</div>')",
+    "            ",
+    "            elif output_type == 'error':",
+    "                ename = output.get('ename', 'Error')",
+    "                evalue = output.get('evalue', '')",
+    "                html_parts.append(f'<div class=\"output\" style=\"color:red;\"><pre>{ename}: {evalue}</pre></div>')",
+    "        ",
+    "        html_parts.append('</div>')",
+    "",
+    "html_parts.append('</body></html>')",
     "",
     "# Save HTML file",
     "html_output = EXPORT_DIR / f\"{base_name}_{timestamp}.html\"",
     "with open(html_output, 'w', encoding='utf-8') as f:",
-    "    f.write(body)",
+    "    f.write('\\n'.join(html_parts))",
     "",
     "print(f\"\\n\u2705 HTML exported successfully!\")",
     "print(f\"   \ud83d\udcc1 {html_output}\")",
