Add detailed breakdown for Cohen's d effect size calculation
- Introduced a new code cell to compute and display the components of Cohen's d.
- Included detailed print statements for means, standard deviations, pooled standard deviation, and mean differences.
- Added interpretation of effect size based on Cohen's d thresholds.
- Displayed individual field values used in the calculation for better transparency.

--- a/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
+++ b/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
@@ -925,6 +925,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 19\n",
+    "# =============================================================================\n",
+    "# COHEN'S D CALCULATION - DETAILED BREAKDOWN\n",
+    "# =============================================================================\n",
+    "# This table shows all values used in the Cohen's d effect size calculation\n",
+    "\n",
+    "print(\"=\" * 70)\n",
+    "print(\"📊 COHEN'S D EFFECT SIZE - CALCULATION DETAILS\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "# Get the comparable data used in statistical tests\n",
+    "comparable_only = comparison_df[~comparison_df['is_exclusive']] if 'is_exclusive' in comparison_df.columns else comparison_df\n",
+    "valid_df = comparable_only.dropna(subset=['current_accuracy', 'competing_accuracy'])\n",
+    "current_values = valid_df['current_accuracy'].values\n",
+    "competing_values = valid_df['competing_accuracy'].values\n",
+    "\n",
+    "# Calculate components\n",
+    "current_mean = current_values.mean()\n",
+    "competing_mean = competing_values.mean()\n",
+    "current_std = current_values.std()\n",
+    "competing_std = competing_values.std()\n",
+    "pooled_std = np.sqrt((current_std**2 + competing_std**2) / 2)\n",
+    "mean_diff = current_mean - competing_mean\n",
+    "cohens_d_calc = mean_diff / pooled_std if pooled_std > 0 else 0\n",
+    "\n",
+    "# Print detailed table\n",
+    "print(f\"\\n{'Component':<35} {'Value':>15} {'Formula':<30}\")\n",
+    "print(\"-\" * 80)\n",
+    "print(f\"{'N (comparable fields)':<35} {len(current_values):>15}\")\n",
+    "print(f\"{'Current Model Mean (μ₁)':<35} {current_mean:>15.4f}\")\n",
+    "print(f\"{'Competing Model Mean (μ₂)':<35} {competing_mean:>15.4f}\")\n",
+    "print(f\"{'Current Model Std Dev (σ₁)':<35} {current_std:>15.4f}\")\n",
+    "print(f\"{'Competing Model Std Dev (σ₂)':<35} {competing_std:>15.4f}\")\n",
+    "print(\"-\" * 80)\n",
+    "print(f\"{'Pooled Std Dev (σ_pooled)':<35} {pooled_std:>15.4f} {'√((σ₁² + σ₂²) / 2)':<30}\")\n",
+    "print(f\"{'Mean Difference (μ₁ - μ₂)':<35} {mean_diff:>15.4f}\")\n",
+    "print(\"-\" * 80)\n",
+    "print(f\"{'Cohen\\'s d':<35} {cohens_d_calc:>15.4f} {'(μ₁ - μ₂) / σ_pooled':<30}\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "# Effect size interpretation\n",
+    "if abs(cohens_d_calc) < 0.2:\n",
+    "    interpretation = \"Negligible\"\n",
+    "elif abs(cohens_d_calc) < 0.5:\n",
+    "    interpretation = \"Small\"\n",
+    "elif abs(cohens_d_calc) < 0.8:\n",
+    "    interpretation = \"Medium\"\n",
+    "else:\n",
+    "    interpretation = \"Large\"\n",
+    "\n",
+    "print(f\"\\n📈 Interpretation: |d| = {abs(cohens_d_calc):.2f} → {interpretation} effect size\")\n",
+    "print(f\"   (Thresholds: <0.2 Negligible, 0.2-0.5 Small, 0.5-0.8 Medium, >0.8 Large)\")\n",
+    "\n",
+    "# Show individual field values used\n",
+    "print(f\"\\n\\n📋 INDIVIDUAL FIELD VALUES USED IN CALCULATION\")\n",
+    "print(\"-\" * 70)\n",
+    "field_values = valid_df[['field', 'current_accuracy', 'competing_accuracy']].copy()\n",
+    "field_values['difference'] = field_values['current_accuracy'] - field_values['competing_accuracy']\n",
+    "field_values = field_values.sort_values('difference', ascending=False)\n",
+    "for _, row in field_values.iterrows():\n",
+    "    print(f\"  {row['field']:<25} Current: {row['current_accuracy']:.3f}  Competing: {row['competing_accuracy']:.3f}  Diff: {row['difference']:+.3f}\")\n",
+    "print(\"=\" * 70)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
