Refactor paths and improve output formatting in lmmpoc_layoutlm_comparison notebook
- Updated paths for current model and output directories to remove redundant 'output' subdirectory.
- Enhanced print statements for Cohen's d calculation details for better readability.
- Removed unnecessary emojis and added clearer labels in printed output.
- Improved variable usage in individual field values display for clarity.

--- a/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
+++ b/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
@@ -63,7 +63,7 @@
     "COMPETING_MODEL_CSV = Path(\"/home/jovyan/shared_annotations/output/competing_model_accuracy.csv\")\n",
     "\n",
     "# Path to current model's results\n",
-    "CURRENT_MODEL_CSV = Path(\"/home/jovyan/shared_annotations/output/output/current_model_accuracy.csv\")\n",
+    "CURRENT_MODEL_CSV = Path(\"/home/jovyan/shared_annotations/output/current_model_accuracy.csv\")\n",
     "\n",
     "# Model names for display\n",
     "# CURRENT_MODEL_NAME = \"InternVL3-8B\"\n",
@@ -74,7 +74,7 @@
     "COMPETING_MODEL_NAME = \"LayoutLM\"\n",
     "\n",
     "# Output directory for comparison results\n",
-    "OUTPUT_DIR = Path(\"/home/jovyan/shared_annotations/output/output/comparison\")\n",
+    "OUTPUT_DIR = Path(\"/home/jovyan/shared_annotations/output/comparison\")\n",
     "OUTPUT_DIR.mkdir(parents=True, exist_ok=True)\n",
     "# SVG exports directory\n",
     "EXPORTS_DIR = Path('/home/jovyan/LMM_POC-main/notebooks_v2/exports')\n",
@@ -930,14 +930,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 19\n",
     "# =============================================================================\n",
     "# COHEN'S D CALCULATION - DETAILED BREAKDOWN\n",
     "# =============================================================================\n",
     "# This table shows all values used in the Cohen's d effect size calculation\n",
     "\n",
     "print(\"=\" * 70)\n",
-    "print(\"📊 COHEN'S D EFFECT SIZE - CALCULATION DETAILS\")\n",
+    "print(\"COHEN'S D EFFECT SIZE - CALCULATION DETAILS\")\n",
     "print(\"=\" * 70)\n",
     "\n",
     "# Get the comparable data used in statistical tests\n",
@@ -956,18 +955,21 @@
     "cohens_d_calc = mean_diff / pooled_std if pooled_std > 0 else 0\n",
     "\n",
     "# Print detailed table\n",
-    "print(f\"\\n{'Component':<35} {'Value':>15} {'Formula':<30}\")\n",
+    "print(f\"\")\n",
+    "print(f\"{'Component':<35} {'Value':>15} {'Formula':<30}\")\n",
     "print(\"-\" * 80)\n",
     "print(f\"{'N (comparable fields)':<35} {len(current_values):>15}\")\n",
-    "print(f\"{'Current Model Mean (μ₁)':<35} {current_mean:>15.4f}\")\n",
-    "print(f\"{'Competing Model Mean (μ₂)':<35} {competing_mean:>15.4f}\")\n",
-    "print(f\"{'Current Model Std Dev (σ₁)':<35} {current_std:>15.4f}\")\n",
-    "print(f\"{'Competing Model Std Dev (σ₂)':<35} {competing_std:>15.4f}\")\n",
+    "print(f\"{'Current Model Mean':<35} {current_mean:>15.4f}\")\n",
+    "print(f\"{'Competing Model Mean':<35} {competing_mean:>15.4f}\")\n",
+    "print(f\"{'Current Model Std Dev':<35} {current_std:>15.4f}\")\n",
+    "print(f\"{'Competing Model Std Dev':<35} {competing_std:>15.4f}\")\n",
     "print(\"-\" * 80)\n",
-    "print(f\"{'Pooled Std Dev (σ_pooled)':<35} {pooled_std:>15.4f} {'√((σ₁² + σ₂²) / 2)':<30}\")\n",
-    "print(f\"{'Mean Difference (μ₁ - μ₂)':<35} {mean_diff:>15.4f}\")\n",
+    "pooled_label = \"Pooled Std Dev\"\n",
+    "print(f\"{pooled_label:<35} {pooled_std:>15.4f} {'sqrt((s1^2 + s2^2) / 2)':<30}\")\n",
+    "print(f\"{'Mean Difference':<35} {mean_diff:>15.4f}\")\n",
     "print(\"-\" * 80)\n",
-    "print(f\"{'Cohen\\'s d':<35} {cohens_d_calc:>15.4f} {'(μ₁ - μ₂) / σ_pooled':<30}\")\n",
+    "cohens_label = \"Cohen's d\"\n",
+    "print(f\"{cohens_label:<35} {cohens_d_calc:>15.4f} {'(mean1 - mean2) / pooled_std':<30}\")\n",
     "print(\"=\" * 70)\n",
     "\n",
     "# Effect size interpretation\n",
@@ -980,17 +982,22 @@
     "else:\n",
     "    interpretation = \"Large\"\n",
     "\n",
-    "print(f\"\\n📈 Interpretation: |d| = {abs(cohens_d_calc):.2f} → {interpretation} effect size\")\n",
-    "print(f\"   (Thresholds: <0.2 Negligible, 0.2-0.5 Small, 0.5-0.8 Medium, >0.8 Large)\")\n",
+    "print(f\"\")\n",
+    "print(f\"Interpretation: |d| = {abs(cohens_d_calc):.2f} -> {interpretation} effect size\")\n",
+    "print(f\"(Thresholds: <0.2 Negligible, 0.2-0.5 Small, 0.5-0.8 Medium, >0.8 Large)\")\n",
     "\n",
     "# Show individual field values used\n",
-    "print(f\"\\n\\n📋 INDIVIDUAL FIELD VALUES USED IN CALCULATION\")\n",
+    "print(f\"\")\n",
+    "print(f\"INDIVIDUAL FIELD VALUES USED IN CALCULATION\")\n",
     "print(\"-\" * 70)\n",
     "field_values = valid_df[['field', 'current_accuracy', 'competing_accuracy']].copy()\n",
     "field_values['difference'] = field_values['current_accuracy'] - field_values['competing_accuracy']\n",
     "field_values = field_values.sort_values('difference', ascending=False)\n",
     "for _, row in field_values.iterrows():\n",
-    "    print(f\"  {row['field']:<25} Current: {row['current_accuracy']:.3f}  Competing: {row['competing_accuracy']:.3f}  Diff: {row['difference']:+.3f}\")\n",
+    "    curr = row['current_accuracy']\n",
+    "    comp = row['competing_accuracy']\n",
+    "    diff = row['difference']\n",
+    "    print(f\"  {row['field']:<25} Current: {curr:.3f}  Competing: {comp:.3f}  Diff: {diff:+.3f}\")\n",
     "print(\"=\" * 70)"
    ]
   },
